# secureflow

./: README.md  pyproject.toml
api/: main.py
api/routes/: dashboard.py  findings.py  notifications.py  pipeline.py  webhooks.py
dashboard/: package.json
dashboard/src/: App.tsx  api.ts  types.ts
dashboard/src/components/: CompliancePanel.tsx  ConfidenceBadge.tsx  CweFixRateChart.tsx  DevinInfoModal.tsx  FilterBar.tsx  FindingRow.tsx  FindingsTable.tsx  NotificationFeed.tsx  PipelineControls.tsx  PipelineFlowView.tsx  RemediationTimeline.tsx  SeverityDonut.tsx  StatsBar.tsx
scripts/: run_pipeline.py  seed_demo_data.py
secureflow/: config.py  database.py  devin_client.py  github_client.py  models.py  notifications.py  orchestrator.py  prompts.py  triage.py
tests/: test_api.py  test_triage.py
